Fixed alignment of text +/- buttons

--- a/src/components/script/ScriptEventForm.css
+++ b/src/components/script/ScriptEventForm.css
@@ -25,11 +25,17 @@
   color: var(--main-text-color);
   width: 18px;
   height: 18px;
+  line-height: 18px;
   margin-left: 4px;
   opacity: 0.4;
   padding: 0;
   border: 0;
   border-radius: 2px;
+}
+
+.ScriptEventForm__Btn svg {
+  width: 8px;
+  height: 8px;
 }
 
 .ScriptEventForm__InputRow:hover .ScriptEventForm__Btn {
